Integrated april 18-19 feedback (musicbrainz ticket OTHER-208)

--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -82,7 +82,7 @@
     </div>
     <div class="container">
       <div class="jumbotron">
-        <h1>
+      <h1>
            Lobes - for MusicBrainz
            <small><br/>Kitchen Sink</small>
          </h1>
@@ -93,7 +93,7 @@
         <div class="col-lg-4">
           <div class="panel panel-default" id="colors">
             <div class="panel-heading">Primary Colors</div>
-            <div class="panel-body">
+            <div class="panel-body corporate-background">
               <div class="hexagon-container">
                 <div class="orange hexagon"></div>
                 <div class="purple hexagon"></div>
@@ -110,7 +110,7 @@
         <div class="col-lg-8">
           <div class="panel panel-default" id="colors2">
             <div class="panel-heading">Secondary Colors</div>
-            <div class="panel-body">
+            <div class="panel-body corporate-background">
               <div class="hexagon-container">
                 <div class="blue hexagon"></div>
                 <div class="green hexagon"></div>
@@ -143,6 +143,7 @@
             <h4>This is an h4 heading</h4>
             <h5>This is an h5 heading</h5>
             <h6>This is an h6 heading</h6>
+            <h6>CУЯILLIC FФИT SЦPPФЯT TЗST</h6>
             </div>
           </div>
           <div class="panel panel-default" id="tables">
@@ -227,6 +228,7 @@
             <p class="text-danger">Danger color paragraph.</p>
             <p class="text-info">Info color paragraph.</p>
             <p class="text-success">Success color paragraph.</p>
+            <p>CУЯILLIC FФИT SЦPPФЯT TЗST</p>
             <p><small>This is text in a <code>small</code> wrapper. <abbr title="No Big Deal">NBD</abbr>, right?</small></p>
             <hr>
             <address>                <strong>Twitter, Inc.</strong><br>                795 Folsom Ave, Suite 600<br>                San Francisco, CA 94107<br>                <abbr title="Phone">P:</abbr> (123) 456-7890              </address><address class="col-6">                <strong>Full Name</strong><br>                <a href="mailto:#">first.last@example.com</a>              </address>
@@ -544,6 +546,44 @@
                 <p class="navbar-text navbar-right">Navbar Text</p>
               </div>
             </div>
+            <hr>
+              <p>Alt colors</p>
+              <div class="navbar navbar-default navbar-default-alt">
+                <div class="navbar-header">
+                  <a href="#" class="navbar-brand">Your Company</a>
+                </div>
+                <div class="navbar-collapse">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li class="active">
+                      <a href="#">Home</a>
+                    </li>
+                    <li>
+                      <a href="#">About</a>
+                    </li>
+                    <li>
+                      <a href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="navbar navbar-inverse navbar-inverse-alt">
+                <div class="navbar-header">
+                  <a href="#" class="navbar-brand">Your Company</a>
+                </div>
+                <div class="navbar-collapse">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li class="active">
+                      <a href="#">Home</a>
+                    </li>
+                    <li>
+                      <a href="#">About</a>
+                    </li>
+                    <li>
+                      <a href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
