--- a/pages/examples/kitchen-sink.html
+++ b/pages/examples/kitchen-sink.html
@@ -36,6 +36,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">CSS <span class="caret"></span></a>
               <ul class="dropdown-menu">
+                <li><a href="#colors">Colors</a></li>
                 <li><a href="#headings">Headings</a></li>
                 <li><a href="#content-formatting">Content</a></li>
                 <li><a href="#tables">Tables</a></li>
@@ -81,25 +82,68 @@
     </div>
     <div class="container">
       <div class="jumbotron">
-        <h1>
+      <h1>
           {{#if bower.themestrap.name}} {{bower.themestrap.name}}{{else}}{{bower.name}}{{/if}}
-           Kitchen Sink
+           <small><br/>Kitchen Sink</small>
          </h1>
         <p>A quick preview of everything Bootstrap has to offer.</p>
         <p><a class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="panel panel-default" id="colors">
+            <div class="panel-heading">Primary Colors</div>
+            <div class="panel-body corporate-background">
+              <div class="hexagon-container">
+                <div class="orange hexagon"></div>
+                <div class="purple hexagon"></div>
+              </div>
+              <div class="hexagon-container">
+                <div class="small dark orange hexagon"></div>
+                <div class="small light orange hexagon"></div>
+                <div class="small dark  purple hexagon"></div>
+                <div class="small light purple hexagon"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8">
+          <div class="panel panel-default" id="colors2">
+            <div class="panel-heading">Secondary Colors</div>
+            <div class="panel-body corporate-background">
+              <div class="hexagon-container">
+                <div class="blue hexagon"></div>
+                <div class="green hexagon"></div>
+                <div class="red hexagon"></div>
+                <div class="yellow hexagon"></div>
+              </div>
+              <div class="hexagon-container">
+                <div class="small dark  blue hexagon"></div>
+                <div class="small light blue hexagon"></div>
+                <div class="small dark  green hexagon"></div>
+                <div class="small light green hexagon"></div>
+                <div class="small dark  red hexagon"></div>
+                <div class="small light red hexagon"></div>
+                <div class="small dark  yellow hexagon"></div>
+                <div class="small light yellow hexagon"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-lg-6">
           <div class="panel panel-default" id="headings">
             <div class="panel-heading">Headings</div>
             <div class="panel-body">
-            <h1 class="page-header">Page Header <small>With Small Text</small></h1>
+            <h1 class="page-header">Header font: Roboto Regular</br><small>Subtitle Roboto Light</small></h1>
             <h1>This is an h1 heading</h1>
             <h2>This is an h2 heading</h2>
             <h3>This is an h3 heading</h3>
             <h4>This is an h4 heading</h4>
             <h5>This is an h5 heading</h5>
             <h6>This is an h6 heading</h6>
+            <h6>CУЯILLIC FФИT SЦPPФЯT TЗST</h6>
             </div>
           </div>
           <div class="panel panel-default" id="tables">
@@ -176,13 +220,15 @@
             <div class="panel-heading">Content Formatting
             </div>
             <div class="panel-body">
-            <p class="lead">This is a lead paragraph.</p>
+            <p class="lead">Text font: Sintony</p>
             <p>This is an <b>ordinary paragraph</b> that is <i>long enough</i> to wrap to <u>multiple lines</u> so that you can see how the line spacing looks.</p>
+            <p class="lead pull-right" style="font-size: 5em;text-align: right;line-height:1em;  margin: 20px;">Fruno</br>bigax</p>
             <p class="text-muted">Muted color paragraph.</p>
             <p class="text-warning">Warning color paragraph.</p>
             <p class="text-danger">Danger color paragraph.</p>
             <p class="text-info">Info color paragraph.</p>
             <p class="text-success">Success color paragraph.</p>
+            <p>CУЯILLIC FФИT SЦPPФЯT TЗST</p>
             <p><small>This is text in a <code>small</code> wrapper. <abbr title="No Big Deal">NBD</abbr>, right?</small></p>
             <hr>
             <address>                <strong>Twitter, Inc.</strong><br>                795 Folsom Ave, Suite 600<br>                San Francisco, CA 94107<br>                <abbr title="Phone">P:</abbr> (123) 456-7890              </address><address class="col-6">                <strong>Full Name</strong><br>                <a href="mailto:#">first.last@example.com</a>              </address>
@@ -500,6 +546,44 @@
                 <p class="navbar-text navbar-right">Navbar Text</p>
               </div>
             </div>
+            <hr>
+              <p>Alt colors</p>
+              <div class="navbar navbar-default navbar-default-alt">
+                <div class="navbar-header">
+                  <a href="#" class="navbar-brand">Your Company</a>
+                </div>
+                <div class="navbar-collapse">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li class="active">
+                      <a href="#">Home</a>
+                    </li>
+                    <li>
+                      <a href="#">About</a>
+                    </li>
+                    <li>
+                      <a href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="navbar navbar-inverse navbar-inverse-alt">
+                <div class="navbar-header">
+                  <a href="#" class="navbar-brand">Your Company</a>
+                </div>
+                <div class="navbar-collapse">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li class="active">
+                      <a href="#">Home</a>
+                    </li>
+                    <li>
+                      <a href="#">About</a>
+                    </li>
+                    <li>
+                      <a href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -637,12 +721,12 @@
             <div class="panel-body">
             <p></p>
             <div class="media">
-              <a class="pull-left" href="#">    <img class="media-object" src="https://app.divshot.com/img/placeholder-64x64.gif">  </a>
+              <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placezombie.com/64x64">  </a>
               <div class="media-body">
                 <h4 class="media-heading">Media heading</h4>
                 <p>This is the content for your media.</p>
                 <div class="media">
-                  <a class="pull-left" href="#">    <img class="media-object" src="https://app.divshot.com/img/placeholder-64x64.gif">  </a>
+                  <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placezombie.com/64x64">  </a>
                   <div class="media-body">
                     <h4 class="media-heading">Media heading</h4>
                     <p>This is the content for your media.</p>
