Added all projects navbars and styles

--- a/pages/examples/kitchen-sink.html
+++ b/pages/examples/kitchen-sink.html
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand logo" href="#">
-             <img class="extrasmall logo" src="{{assets}}/assets/MetaBrainz_logo_web_extrasmall.png" alt="{{#if bower.themestrap.name}} {{bower.themestrap.name}}{{else}}{{bower.name}}{{/if}}" style="height: 30px;"></img>
+             <img src="{{assets}}/assets/MetaBrainz_logo_mini.svg" alt="{{#if bower.themestrap.name}} {{bower.themestrap.name}}{{else}}{{bower.name}}{{/if}}"></img>
              </a>
         </div>
         
@@ -536,7 +536,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6" id="navbar">
+        <div class="col-lg-12" id="navbar">
           <div class="panel panel-default">
             <div class="panel-heading">Navbars
             </div>
@@ -565,7 +565,7 @@
             </div>
             <div class="navbar navbar-default MusicBrainz">
               <div class="navbar-header">
-                <a href="#" class="navbar-brand">MusicBrainz</a>
+                <a href="#" class="navbar-brand logo"><img src="{{assets}}/assets/MusicBrainz_logo_mini.svg" alt="MusicBrainz"></img></a>
               </div>
               <div class="navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -586,7 +586,7 @@
             </div>
             <div class="navbar navbar-default MetaBrainz">
               <div class="navbar-header">
-                <a href="#" class="navbar-brand">MetaBrainz</a>
+                <a href="#" class="navbar-brand logo"><img src="{{assets}}/assets/MetaBrainz_logo_mini.svg" alt="MetaBrainz"></img></a>
               </div>
               <div class="navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -607,7 +607,7 @@
             </div>
             <div class="navbar navbar-default CritiqueBrainz">
               <div class="navbar-header">
-                <a href="#" class="navbar-brand">CritiqueBrainz</a>
+                <a href="#" class="navbar-brand logo"><img src="{{assets}}/assets/CritiqueBrainz_logo_mini.svg" alt="CritiqueBrainz"></img></a>
               </div>
               <div class="navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -628,7 +628,7 @@
             </div>
             <div class="navbar navbar-default AcousticBrainz">
               <div class="navbar-header">
-                <a href="#" class="navbar-brand">AcousticBrainz</a>
+                <a href="#" class="navbar-brand logo"><img src="{{assets}}/assets/AcousticBrainz_logo_mini.svg" alt="AcousticBrainz"></img></a>
               </div>
               <div class="navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -649,7 +649,49 @@
             </div>
             <div class="navbar navbar-default BookBrainz">
               <div class="navbar-header">
-                <a href="#" class="navbar-brand">BookBrainz</a>
+                <a href="#" class="navbar-brand logo"><img src="{{assets}}/assets/BookBrainz_logo_mini.svg" alt="BookBrainz"></img></a>
+              </div>
+              <div class="navbar-collapse">
+                <ul class="nav navbar-nav">
+                  <li class="active">
+                    <a href="#">Home</a>
+                  </li>
+                  <li>
+                    <a href="#">About</a>
+                  </li>
+                  <li>
+                    <a href="#">Contact</a>
+                  </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="support-link"><a href="/supporters/account-type">Support us</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="navbar navbar-default Picard">
+              <div class="navbar-header">
+                <a href="#" class="navbar-brand logo"><img src="{{assets}}/assets/Picard_logo_mini.svg" alt="Picard"></img></a>
+              </div>
+              <div class="navbar-collapse">
+                <ul class="nav navbar-nav">
+                  <li class="active">
+                    <a href="#">Home</a>
+                  </li>
+                  <li>
+                    <a href="#">About</a>
+                  </li>
+                  <li>
+                    <a href="#">Contact</a>
+                  </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="support-link"><a href="/supporters/account-type">Support us</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="navbar navbar-default CoverArtArchive">
+              <div class="navbar-header">
+                <a href="#" class="navbar-brand logo"><img src="{{assets}}/assets/CoverArtArchive_logo_mini.svg" alt="CoverArtArchive"></img></a>
               </div>
               <div class="navbar-collapse">
                 <ul class="nav navbar-nav">
