--- a/examples/logo-carousel.html
+++ b/examples/logo-carousel.html
@@ -3,11 +3,11 @@
 <html>
   
   <head>
-    <title>Lobes - for MusicBrainz - A Bootstrap 3 Theme</title>
+    <title>Lobes - for MusicBrainz - A Bootstrap 4 Theme</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../dist/css/bootstrap.css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js" integrity="sha512-wV7Yj1alIZDqZFCUQJy85VN+qvEIly93fIQAN7iqDFCPEucLCeNFz4r35FCo9s6WrpdDQPi80xbljXB8Bjtvcg==" crossorigin="anonymous"></script>
   </head>
   
   <body>
