--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -125,9 +125,9 @@
       </div>
       <div class="row">
         <div class="col-lg-4">
-          <div class="panel panel-default" id="colors">
-            <div class="panel-heading">Primary Colors</div>
-            <div class="panel-body corporate-background">
+          <div class="card" id="colors">
+            <h4 class="card-header">Primary Colors</h4>
+            <div class="card-body corporate-background">
               <div class="hexagon-container">
                 <div class="orange hexagon"></div>
                 <div class="purple hexagon"></div>
@@ -142,9 +142,9 @@
           </div>
         </div>
         <div class="col-lg-8">
-          <div class="panel panel-default" id="colors2">
-            <div class="panel-heading">Secondary Colors</div>
-            <div class="panel-body corporate-background">
+          <div class="card" id="colors2">
+            <h4 class="card-header">Secondary Colors</h4>
+            <div class="card-body corporate-background">
               <div class="hexagon-container">
                 <div class="blue hexagon"></div>
                 <div class="green hexagon"></div>
@@ -167,9 +167,9 @@
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <div class="panel panel-default" id="headings">
-            <div class="panel-heading">Headings</div>
-            <div class="panel-body">
+          <div class="card" id="headings">
+            <h4 class="card-header">Headings</h4>
+            <div class="card-body">
             <h1 class="page-header">Header font: Roboto Regular</br><small>Subtitle Roboto Light</small></h1>
             <h1>This is an h1 heading</h1>
             <h2>This is an h2 heading</h2>
@@ -180,10 +180,10 @@
             <h6>CУЯILLIC FФИT SЦPPФЯT TЗST</h6>
             </div>
           </div>
-          <div class="panel panel-default" id="tables">
-            <div class="panel-heading">Tables
-            </div>
-            <div class="panel-body">
+          <div class="card" id="tables">
+            <h4 class="card-header">Tables
+            </h4>
+            <div class="card-body">
             <table class="table table-hover">
               <thead>
                 <tr>
@@ -250,10 +250,9 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="panel panel-default" id="content-formatting">
-            <div class="panel-heading">Content Formatting
-            </div>
-            <div class="panel-body">
+          <div class="card" id="content-formatting">
+            <h4 class="card-header">Content Formatting</h4>
+            <div class="card-body">
             <p class="lead">Text font: Sintony</p>
             <p>This is an <b>ordinary paragraph</b> that is <i>long enough</i> to wrap to <u>multiple lines</u> so that you can see how the line spacing looks.</p>
             <p class="lead pull-right" style="font-size: 5em;text-align: right;line-height:1em;  margin: 20px;">Fruno</br>bigax</p>
@@ -300,10 +299,9 @@
           </div>
         </div>
       </div>
-      <div class="panel panel-default" id="forms">
-        <div class="panel-heading">Forms
-        </div>
-        <div class="panel-body">
+      <div class="card" id="forms">
+        <h4 class="card-header">Forms</h4>
+        <div class="card-body">
         <form>
           <fieldset>
             <legend>Legend</legend>
@@ -379,10 +377,10 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <div class="panel panel-default" id="buttons">
-            <div class="panel-heading">Buttons
-            </div>
-            <div class="panel-body">
+          <div class="card" id="buttons">
+            <h4 class="card-header">Buttons
+            </h4>
+            <div class="card-body">
               <p>
                 <button type="button" class="btn btn-lg btn-default">Default</button>
                 <button type="button" class="btn btn-lg btn-primary">Primary</button>
@@ -439,10 +437,9 @@
       </div>
       <div class="row">
         <div class="col-lg-3">
-          <div class="panel panel-default" id="dropdowns">
-            <div class="panel-heading">Dropdowns
-            </div>
-            <div class="panel-body clearfix">
+          <div class="card" id="dropdowns">
+            <h4 class="card-header">Dropdowns</h4>
+            <div class="card-body clearfix">
             <div class="dropdown">
               <!-- Link or button to toggle dropdown -->
               <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu" style="display: block; position: static;">
@@ -466,10 +463,10 @@
           </div>
         </div>
         <div class="col-lg-5">
-          <div class="panel panel-default" id="input-groups">
-            <div class="panel-heading">Input Groups
-            </div>
-            <div class="panel-body">
+          <div class="card" id="input-groups">
+            <h4 class="card-header">Input Groups
+            </h4>
+            <div class="card-body">
             <div class="input-group">
               <span class="input-group-btn">                <button class="btn btn-default" type="button">Go!</button>              </span><input type="text" class="form-control" placeholder="Username">
             </div><br>
@@ -489,10 +486,10 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="panel panel-default" id="images">
-            <div class="panel-heading">Images
-            </div>
-            <div class="panel-body">
+          <div class="card" id="images">
+            <h4 class="card-header">Images
+            </h4>
+            <div class="card-body">
             <p><img src="http://placehold.it/100x100" class="img-rounded">
               <img src="http://placehold.it/100x100" class="img-circle">
               <img src="http://placehold.it/100x100" class="img-thumbnail"></p>
@@ -502,10 +499,9 @@
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <div class="panel panel-default" id="navs">
-            <div class="panel-heading">Navs
-            </div>
-            <div class="panel-body clearfix">
+          <div class="card" id="navs">
+            <h4 class="card-header">Navs</h4>
+            <div class="card-body clearfix">
             <ul class="nav nav-tabs">
               <li class="nav-item">
                 <a class="nav-link active" href="#">Home</a>
@@ -538,10 +534,10 @@
           </div>
         </div>
         <div class="col-lg-12" id="navbar">
-          <div class="panel panel-default">
-            <div class="panel-heading">Navbars
-            </div>
-            <div class="panel-body">
+          <div class="card">
+            <h4 class="card-header">Navbars
+            </h4>
+            <div class="card-body">
             <p></p>
             <div class="navbar navbar-expand-lg navbar-light">
               <a href="#" class="navbar-brand">Standard</a>
@@ -710,10 +706,10 @@
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <div class="panel panel-default" id="pagination">
-            <div class="panel-heading">Pagination
-            </div>
-            <div class="panel-body">
+          <div class="card" id="pagination">
+            <h4 class="card-header">Pagination
+            </h4>
+            <div class="card-body">
             <ul class="pagination" style="margin-right: 10px;">
               <li>
                 <a href="#">Prev</a>
@@ -764,20 +760,20 @@
             </ul>
           </div>
         </div>
-          <div class="panel panel-default" id="labels">
-            <div class="panel-heading">Labels and Badges
-            </div>
-            <div class="panel-body">
+          <div class="card" id="labels">
+            <h4 class="card-header">Labels and Badges
+            </h4>
+            <div class="card-body">
             <h3><span class="label label-default">Default</span>&nbsp;<span class="label label-success">Success</span>&nbsp;<span class="label label-warning">Warning</span>&nbsp;<span class="label label-danger">Danger</span>&nbsp;<span class="label label-info">Info</span></h3>
             <p class="lead"><a href="#">Inbox <span class="badge">42</span></a></p>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="panel panel-default" id="alerts">
-            <div class="panel-heading">Alerts
-            </div>
-            <div class="panel-body">
+          <div class="card" id="alerts">
+            <h4 class="card-header">Alerts
+            </h4>
+            <div class="card-body">
             <div>
               <div class="alert alert-danger">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -807,10 +803,10 @@
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <div class="panel panel-default" id="progress">
-            <div class="panel-heading">Progress Bars
-            </div>
-            <div class="panel-body">
+          <div class="card" id="progress">
+            <h4 class="card-header">Progress Bars
+            </h4>
+            <div class="card-body">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="sr-only">60% Complete</span></div>
               </div>
@@ -835,10 +831,10 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="panel panel-default" id="media-object">
-            <div class="panel-heading">Media Object
-            </div>
-            <div class="panel-body">
+          <div class="card" id="media-object">
+            <h4 class="card-header">Media Object
+            </h4>
+            <div class="card-body">
             <p></p>
             <div class="media">
               <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placezombie.com/64x64">  </a>
@@ -890,74 +886,74 @@
       </div>
       <div class="row">
         <div class="col-lg-3">
-          <div class="panel panel-primary" id="panels">
-            <div class="panel-heading">This is a header
-            </div>
-            <p class="panel-body">This is a panel</p>
-            <div class="panel-footer">This is a footer
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="panel panel-success">
-            <div class="panel-heading">This is a header
-            </div>
-            <div class="panel-body">This is a panel</div>
-            <div class="panel-footer">This is a footer
+          <div class="card card-primary" id="panels">
+            <h4 class="card-header">This is a header
+            </h4>
+            <p class="card-body">This is a panel</p>
+            <div class="card-footer">This is a footer
             </div>
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="panel panel-danger">
-            <div class="panel-heading hexagonBullet">This is a header with a hexagon bullet
-            </div>
-            <div class="panel-body">This is a panel</div>
-            <div class="panel-footer">This is a footer
+          <div class="card card-success">
+            <h4 class="card-header">This is a header
+            </h4>
+            <div class="card-body">This is a panel</div>
+            <div class="card-footer">This is a footer
             </div>
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="panel panel-warning">
-            <div class="panel-heading">This is a header
+          <div class="card card-danger">
+            <h4 class="card-header hexagonBullet">This is a header with a hexagon bullet
+            </h4>
+            <div class="card-body">This is a panel</div>
+            <div class="card-footer">This is a footer
             </div>
-            <div class="panel-body">This is a panel</div>
-            <div class="panel-footer">This is a footer
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card card-warning">
+            <h4 class="card-header">This is a header
+            </h4>
+            <div class="card-body">This is a panel</div>
+            <div class="card-footer">This is a footer
             </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-3">
-          <div class="panel panel-info">
-            <div class="panel-heading">This is a header
-            </div>
-            <p class="panel-body">This is a panel</p>
-            <div class="panel-footer">This is a footer
+          <div class="card card-info">
+            <h4 class="card-header">This is a header
+            </h4>
+            <p class="card-body">This is a panel</p>
+            <div class="card-footer">This is a footer
             </div>
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="panel panel-default">
-            <div class="panel-heading">This is a header
-            </div>
-            <div class="panel-body">This is a panel</div>
+          <div class="card card-secondary">
+            <h4 class="card-header">This is a header
+            </h4>
+            <div class="card-body">This is a panel</div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">First Item</li>
               <li class="list-group-item">Second Item</li>
               <li class="list-group-item">Third Item</li>
             </ul>
-            <div class="panel-footer">This is a footer
+            <div class="card-footer">This is a footer
             </div>
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="well" id="wells">Default Well
+          <div class="card card-body bg-light" id="wells">Default Well
           </div>
-          <div class="well well-sm">Small Well
+          <div class="card card-body bg-light py-1">Small Well
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="well well-lg">Large Padding Well
+          <div class="card card-body bg-light py-4">Large Padding Well
           </div>
         </div>
       </div>
