--- a/examples/logo-carousel.html
+++ b/examples/logo-carousel.html
@@ -13,9 +13,9 @@
   <body>
     <div class="container text-center">
       <div class="row">
-        <div class="panel panel-default">
-        <div class="panel-heading">Carousel</div>
-        <div class="panel-body">
+        <div class="card">
+        <h4 class="card-header">Carousel</h4>
+        <div class="card-body">
            <div class="metaCarousel">
             <div id="carousel-example-generic" class="carousel slide" data-pause="hover" data-ride="carousel">
 
