--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -382,7 +382,7 @@
             </h4>
             <div class="card-body">
               <p>
-                <button type="button" class="btn btn-lg btn-default">Default</button>
+                <button type="button" class="btn btn-lg btn-secondary">Default</button>
                 <button type="button" class="btn btn-lg btn-primary">Primary</button>
                 <button type="button" class="btn btn-lg btn-success">Success</button>
                 <button type="button" class="btn btn-lg btn-info">Info</button>
@@ -392,11 +392,11 @@
               </p>
               <p>
               <legend>Hexagonal button proof of concept:</legend>
-                <span class="hb hb-sm hb-flickr"><i class="glyphicon glyphicon-flash"></i></span>
+                <span class="hb hb-sm hb-flickr"><i class="fas fa-bolt"></i></span>
               </p>
               <p>
               <legend>Sizes</legend>
-                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-secondary">Default</button>
                 <button type="button" class="btn btn-primary">Primary</button>
                 <button type="button" class="btn btn-success">Success</button>
                 <button type="button" class="btn btn-info">Info</button>
@@ -405,7 +405,7 @@
                 <button type="button" class="btn btn-link">Link</button>
               </p>
               <p>
-                <button type="button" class="btn btn-sm btn-default">Default</button>
+                <button type="button" class="btn btn-sm btn-secondary">Default</button>
                 <button type="button" class="btn btn-sm btn-primary">Primary</button>
                 <button type="button" class="btn btn-sm btn-success">Success</button>
                 <button type="button" class="btn btn-sm btn-info">Info</button>
@@ -414,22 +414,13 @@
                 <button type="button" class="btn btn-sm btn-link">Link</button>
               </p>
               <p>
-                <button type="button" class="btn btn-xs btn-default">Default</button>
-                <button type="button" class="btn btn-xs btn-primary">Primary</button>
-                <button type="button" class="btn btn-xs btn-success">Success</button>
-                <button type="button" class="btn btn-xs btn-info">Info</button>
-                <button type="button" class="btn btn-xs btn-warning">Warning</button>
-                <button type="button" class="btn btn-xs btn-danger">Danger</button>
-                <button type="button" class="btn btn-xs btn-link">Link</button>
-              </p>
-              <p>
-                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-star"></span> Glyphicons!</button>
-                <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span></button>
-                <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span></button>
-                <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-info-sign"></span></button>
-                <button type="button" class="btn btn-warning"><span class="glyphicon glyphicon-flash"></span></button>
-                <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-ban-circle"></span></button>
-                <button type="button" class="btn btn-link"><span class="glyphicon glyphicon-arrow-right"></span></button>
+                <button type="button" class="btn btn-secondary"><span class="fas fa-star"></span> Icons!</button>
+                <button type="button" class="btn btn-primary"><span class="fas fa-edit"></span></button>
+                <button type="button" class="btn btn-success"><span class="fas fa-plus"></span></button>
+                <button type="button" class="btn btn-info"><span class="fas fa-info-circle"></span></button>
+                <button type="button" class="btn btn-warning"><span class="fas fa-bolt"></span></button>
+                <button type="button" class="btn btn-danger"><span class="fas fa-ban"></span></button>
+                <button type="button" class="btn btn-link"><span class="fas fa-arrow-right"></span></button>
               </p>
           </div>
           </div>
