add bs4 prefix to table context classes

--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -203,22 +203,22 @@
                   <td>Lucille</td>
                   <td>Do you like them?</td>
                 </tr>
-                <tr class="success">
+                <tr class="table-success">
                   <td>3</td>
                   <td>Success</td>
                   <td></td>
                 </tr>
-                <tr class="danger">
+                <tr class="table-danger">
                   <td>4</td>
                   <td>Danger</td>
                   <td></td>
                 </tr>
-                <tr class="warning">
+                <tr class="table-warning">
                   <td>5</td>
                   <td>Warning</td>
                   <td></td>
                 </tr>
-                <tr class="active">
+                <tr class="table-active">
                   <td>6</td>
                   <td>Active</td>
                   <td></td>
