--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -307,7 +307,7 @@
             <legend>Legend</legend>
             <div class="form-group">
               <label for="exampleInputEmail">Email address</label>
-              <input type="text" class="form-control" id="exampleInputEmail" placeholder="Enter email">
+              <input type="email" class="form-control" id="exampleInputEmail" placeholder="Enter email">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword">Password</label>
@@ -315,59 +315,59 @@
             </div>
             <div class="form-group">
               <label for="exampleInputFile">File input</label>
-              <input type="file" id="exampleInputFile">
-              <p class="help-block">Example block-level help text here.</p>
+              <input type="file" class="form-control-file" id="exampleInputFile">
+              <p class="form-text text-muted">Example block-level help text here.</p>
             </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox">Check me out</label>
+            <div class="form-group form-check">
+              <input type="checkbox" id="exampleCheck1">
+              <label type="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </fieldset>
         </form>
         <hr>
         <form class="form-inline">
-          <input type="text" class="form-control" placeholder="Email" style="width: 200px;">
-          <input type="password" class="form-control" placeholder="Password" style="width: 200px;">
-          <div class="checkbox">
-            <label>
-              <input type="checkbox">Remember me</label>
+          <input type="text" class="form-control mr-2" placeholder="Email" style="width: 200px;">
+          <input type="password" class="form-control mr-2" placeholder="Password" style="width: 200px;">
+          <div class="form-check mr-2">
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">Remember me</label>
           </div>
           <button type="submit" class="btn btn-default">Sign in</button>
         </form>
         <hr>
         <form class="form-horizontal">
-          <div class="form-group">
-            <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+          <div class="form-group row">
+            <label for="inputEmail" class="col-lg-2 col-form-label">Email</label>
             <div class="col-lg-10">
               <input type="text" class="form-control" id="inputEmail" placeholder="Email">
             </div>
           </div>
-          <div class="form-group has-warning">
-            <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+          <div class="form-group row has-warning">
+            <label for="inputEmail" class="col-lg-2 col-form-label">Email</label>
             <div class="col-lg-10">
               <input type="text" class="form-control" id="inputEmail" placeholder="Email">
             </div>
           </div>
-          <div class="form-group has-error">
-            <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+          <div class="form-group row has-error">
+            <label for="inputEmail" class="col-lg-2 col-form-label">Email</label>
             <div class="col-lg-10">
               <input type="text" class="form-control" id="inputEmail" placeholder="Email">
             </div>
           </div>
-          <div class="form-group has-success">
-            <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+          <div class="form-group row has-success">
+            <label for="inputEmail" class="col-lg-2 col-form-label">Email</label>
             <div class="col-lg-10">
               <input type="text" class="form-control" id="inputEmail" placeholder="Email">
             </div>
           </div>
-          <div class="form-group">
-            <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+          <div class="form-group row">
+            <label for="inputPassword" class="col-lg-2 col-form-label">Password</label>
             <div class="col-lg-10">
               <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox">Remember me</label>
+              <div class="form-check mt-1 mb-1">
+                <input class="form-check-input" type="checkbox" id="horizontal-check">
+                <label class="form-check-label" for="horizontal-check">Remember me</label>
               </div>
               <button type="submit" class="btn btn-default">Sign in</button>
             </div>
