adjust grid classes for new system
https://getbootstrap.com/docs/4.6/migration/#grid-system

--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -123,8 +123,8 @@
         <p>A quick preview of everything Bootstrap has to offer.</p>
         <p><a class="btn btn-primary btn-lg" href="#">Learn more &raquo;</a></p>
       </div>
-      <div class="row">
-        <div class="col-lg-4">
+      <div class="row mb-4">
+        <div class="col-xl-4">
           <div class="card" id="colors">
             <h4 class="card-header">Primary Colors</h4>
             <div class="card-body corporate-background">
@@ -141,7 +141,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-8">
+        <div class="col-xl-8">
           <div class="card" id="colors2">
             <h4 class="card-header">Secondary Colors</h4>
             <div class="card-body corporate-background">
@@ -165,8 +165,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
+      <div class="row mb-4">
+        <div class="col-xl-6">
           <div class="card" id="headings">
             <h4 class="card-header">Headings</h4>
             <div class="card-body">
@@ -249,7 +249,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <div class="card" id="content-formatting">
             <h4 class="card-header">Content Formatting</h4>
             <div class="card-body">
@@ -269,8 +269,8 @@
             <blockquote>Here's what a blockquote looks like in Bootstrap. <small>Use <code>small</code> to identify the source.</small>
             </blockquote>
             <hr>
-            <div class="row">
-              <div class="col-xs-6">
+            <div class="row mb-4">
+              <div class="col-sm-6">
                 <ul>
                   <li>Normal Unordered List</li>
                   <li>Can Also Work
@@ -281,7 +281,7 @@
                   <li>Adds Bullets to Page</li>
                 </ul>
               </div>
-              <div class="col-xs-6">
+              <div class="col-sm-6">
                 <ol>
                   <li>Normal Ordered List</li>
                   <li>Can Also Work
@@ -338,32 +338,32 @@
         <hr>
         <form class="form-horizontal">
           <div class="form-group row">
-            <label for="inputEmail1" class="col-lg-2 col-form-label">Email</label>
-            <div class="col-lg-10">
+            <label for="inputEmail1" class="col-xl-2 col-form-label">Email</label>
+            <div class="col-xl-10">
               <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
             </div>
           </div>
           <div class="form-group row has-warning">
-            <label for="inputEmail2" class="col-lg-2 col-form-label">Email</label>
-            <div class="col-lg-10">
+            <label for="inputEmail2" class="col-xl-2 col-form-label">Email</label>
+            <div class="col-xl-10">
               <input type="email" class="form-control" id="inputEmail2" placeholder="Email">
             </div>
           </div>
           <div class="form-group row has-error">
-            <label for="inputEmail3" class="col-lg-2 col-form-label">Email</label>
-            <div class="col-lg-10">
+            <label for="inputEmail3" class="col-xl-2 col-form-label">Email</label>
+            <div class="col-xl-10">
               <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
             </div>
           </div>
           <div class="form-group row has-success">
-            <label for="inputEmail4" class="col-lg-2 col-form-label">Email</label>
-            <div class="col-lg-10">
+            <label for="inputEmail4" class="col-xl-2 col-form-label">Email</label>
+            <div class="col-xl-10">
               <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
             </div>
           </div>
           <div class="form-group row">
-            <label for="inputPassword" class="col-lg-2 col-form-label">Password</label>
-            <div class="col-lg-10">
+            <label for="inputPassword" class="col-xl-2 col-form-label">Password</label>
+            <div class="col-xl-10">
               <input type="password" class="form-control" id="inputPassword" placeholder="Password">
               <div class="form-check mt-1 mb-1">
                 <input class="form-check-input" type="checkbox" id="horizontal-check">
@@ -375,8 +375,8 @@
         </form>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-12">
+      <div class="row mb-4">
+        <div class="col-xl-12">
           <div class="card" id="buttons">
             <h4 class="card-header">Buttons
             </h4>
@@ -426,8 +426,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-3">
+      <div class="row mb-4">
+        <div class="col-xl-3">
           <div class="card" id="dropdowns">
             <h4 class="card-header">Dropdowns</h4>
             <div class="card-body clearfix">
@@ -453,7 +453,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5">
+        <div class="col-xl-5">
           <div class="card" id="input-groups">
             <h4 class="card-header">Input Groups
             </h4>
@@ -476,7 +476,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-xl-4">
           <div class="card" id="images">
             <h4 class="card-header">Images
             </h4>
@@ -488,8 +488,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
+      <div class="row mb-4">
+        <div class="col-xl-6">
           <div class="card" id="navs">
             <h4 class="card-header">Navs</h4>
             <div class="card-body clearfix">
@@ -524,7 +524,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-12" id="navbar">
+        <div class="col-xl-12" id="navbar">
           <div class="card">
             <h4 class="card-header">Navbars
             </h4>
@@ -695,8 +695,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
+      <div class="row mb-4">
+        <div class="col-xl-6">
           <div class="card" id="pagination">
             <h4 class="card-header">Pagination
             </h4>
@@ -760,7 +760,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <div class="card" id="alerts">
             <h4 class="card-header">Alerts
             </h4>
@@ -792,8 +792,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
+      <div class="row mb-4">
+        <div class="col-xl-6">
           <div class="card" id="progress">
             <h4 class="card-header">Progress Bars
             </h4>
@@ -821,7 +821,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <div class="card" id="media-object">
             <h4 class="card-header">Media Object
             </h4>
@@ -845,8 +845,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-3">
+      <div class="row mb-4">
+        <div class="col-xl-3">
           <ul class="list-group">
             <li class="list-group-item">Cras justo odio</li>
             <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -855,12 +855,12 @@
             <li class="list-group-item">Vestibulum at eros</li>
           </ul>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <div class="list-group">
             <a href="#" class="list-group-item active">          Cras justo odio        </a><a href="#" class="list-group-item">Dapibus ac facilisis in        </a><a href="#" class="list-group-item">Morbi leo risus        </a><a href="#" class="list-group-item">Porta ac consectetur ac        </a><a href="#" class="list-group-item">Vestibulum at eros        </a>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <ul class="hexagonBullet" style="padding: 0;">
             <li >Hexagonal bullet points, anyone?</li>
             <li >Dapibus ac facilisis in</li>
@@ -869,14 +869,14 @@
             <li >Vestibulum at eros</li>
           </ul>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <div class="list-group">
             <a href="#" class="list-group-item active">          <h4 class="list-group-item-heading">List group item heading</h4>          <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>        </a><a href="#" class="list-group-item">          <h4 class="list-group-item-heading">List group item heading</h4>          <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>        </a><a href="#" class="list-group-item">          <h4 class="list-group-item-heading">List group item heading</h4>          <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>        </a>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-3">
+      <div class="row mb-4">
+        <div class="col-xl-3">
           <div class="card card-primary" id="panels">
             <h4 class="card-header">This is a header
             </h4>
@@ -885,7 +885,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <div class="card card-success">
             <h4 class="card-header">This is a header
             </h4>
@@ -894,7 +894,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <div class="card card-danger">
             <h4 class="card-header hexagonBullet">This is a header with a hexagon bullet
             </h4>
@@ -903,7 +903,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <div class="card card-warning">
             <h4 class="card-header">This is a header
             </h4>
@@ -913,8 +913,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-3">
+      <div class="row mb-4">
+        <div class="col-xl-3">
           <div class="card card-info">
             <h4 class="card-header">This is a header
             </h4>
@@ -923,7 +923,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <div class="card card-secondary">
             <h4 class="card-header">This is a header
             </h4>
@@ -937,13 +937,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <div class="card card-body bg-light" id="wells">Default Well
           </div>
           <div class="card card-body bg-light py-1">Small Well
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xl-3">
           <div class="card card-body bg-light py-4">Large Padding Well
           </div>
         </div>
