--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -338,27 +338,27 @@
         <hr>
         <form class="form-horizontal">
           <div class="form-group row">
-            <label for="inputEmail" class="col-lg-2 col-form-label">Email</label>
+            <label for="inputEmail1" class="col-lg-2 col-form-label">Email</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+              <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
             </div>
           </div>
           <div class="form-group row has-warning">
-            <label for="inputEmail" class="col-lg-2 col-form-label">Email</label>
+            <label for="inputEmail2" class="col-lg-2 col-form-label">Email</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+              <input type="email" class="form-control" id="inputEmail2" placeholder="Email">
             </div>
           </div>
           <div class="form-group row has-error">
-            <label for="inputEmail" class="col-lg-2 col-form-label">Email</label>
+            <label for="inputEmail3" class="col-lg-2 col-form-label">Email</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+              <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
             </div>
           </div>
           <div class="form-group row has-success">
-            <label for="inputEmail" class="col-lg-2 col-form-label">Email</label>
+            <label for="inputEmail4" class="col-lg-2 col-form-label">Email</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+              <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
             </div>
           </div>
           <div class="form-group row">
