--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -255,7 +255,7 @@
             <div class="card-body">
             <p class="lead">Text font: Sintony</p>
             <p>This is an <b>ordinary paragraph</b> that is <i>long enough</i> to wrap to <u>multiple lines</u> so that you can see how the line spacing looks.</p>
-            <p class="lead pull-right" style="font-size: 5em;text-align: right;line-height:1em;  margin: 20px;">Fruno</br>bigax</p>
+            <p class="lead float-right" style="font-size: 5em;text-align: right;line-height:1em;  margin: 20px;">Fruno</br>bigax</p>
             <p class="text-muted">Muted color paragraph.</p>
             <p class="text-warning">Warning color paragraph.</p>
             <p class="text-danger">Danger color paragraph.</p>
@@ -266,7 +266,7 @@
             <hr>
             <address>                <strong>Twitter, Inc.</strong><br>                795 Folsom Ave, Suite 600<br>                San Francisco, CA 94107<br>                <abbr title="Phone">P:</abbr> (123) 456-7890              </address><address class="col-6">                <strong>Full Name</strong><br>                <a href="mailto:#">first.last@example.com</a>              </address>
             <hr>
-            <blockquote>Here's what a blockquote looks like in Bootstrap. <small>Use <code>small</code> to identify the source.</small>
+            <blockquote class="blockquote">Here's what a blockquote looks like in Bootstrap. <small>Use <code>small</code> to identify the source.</small>
             </blockquote>
             <hr>
             <div class="row mb-4">
@@ -322,7 +322,7 @@
               <input type="checkbox" id="exampleCheck1">
               <label type="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-secondary">Submit</button>
           </fieldset>
         </form>
         <hr>
@@ -333,7 +333,7 @@
             <input class="form-check-input" type="checkbox">
             <label class="form-check-label">Remember me</label>
           </div>
-          <button type="submit" class="btn btn-default">Sign in</button>
+          <button type="submit" class="btn btn-secondary">Sign in</button>
         </form>
         <hr>
         <form class="form-horizontal">
@@ -369,7 +369,7 @@
                 <input class="form-check-input" type="checkbox" id="horizontal-check">
                 <label class="form-check-label" for="horizontal-check">Remember me</label>
               </div>
-              <button type="submit" class="btn btn-default">Sign in</button>
+              <button type="submit" class="btn btn-secondary">Sign in</button>
             </div>
           </div>
         </form>
@@ -481,8 +481,8 @@
             <h4 class="card-header">Images
             </h4>
             <div class="card-body">
-            <p><img src="http://placehold.it/100x100" class="img-rounded">
-              <img src="http://placehold.it/100x100" class="img-circle">
+            <p><img src="http://placehold.it/100x100" class="rounded">
+              <img src="http://placehold.it/100x100" class="rounded-circle">
               <img src="http://placehold.it/100x100" class="img-thumbnail"></p>
             </div>
           </div>
@@ -826,14 +826,14 @@
             <h4 class="card-header">Media Object
             </h4>
             <div class="card-body">
-            <p></p>
+            <p><em>Placeholder images from <a href="https://placeholder.com/">placeholder.com</a></em></p>
             <div class="media">
-              <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placezombie.com/64x64">  </a>
+              <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placehold.it/64x64">  </a>
               <div class="media-body">
                 <h4 class="media-heading">Media heading</h4>
                 <p>This is the content for your media.</p>
                 <div class="media">
-                  <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placezombie.com/64x64">  </a>
+                  <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placehold.it/64x64">  </a>
                   <div class="media-body">
                     <h4 class="media-heading">Media heading</h4>
                     <p>This is the content for your media.</p>
